--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-SPOTIFY_CLIENT_ID=<Your Spotify application's Client ID>
-SPOTIFY_CLIENT_SECRET=<Your Spotify application's Client Secret>
-SPOTIFY_CLIENT_REDIRECT_URI=<The URI to which Spotify will redirect after authentication>
+SPOTIFY_CLIENT_ID=<your-client-id>
+SPOTIFY_CLIENT_SECRET=<your-client-secret>
+SPOTIFY_REDIRECT_URI=<your-redirect-uri>
